crates/walrus-codegen/snapshots/struct_constructor.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

%Foo = type { i32 }

define void @builtins.exit(i32 %status) {
  call void @exit(i32 %status)
  unreachable
}

declare void @exit(i32)

define {} @builtins.putchar(i32 %c) {
  %1 = call i32 @putchar(i32 %c)
  ret {} zeroinitializer
}

declare i32 @putchar(i32)

define %Foo @main() {
main.entry:
  %Foo.alloca = alloca %Foo, align 8
  %Foo.x.gep = getelementptr inbounds %Foo, %Foo* %Foo.alloca, i32 0, i32 0
  store i32 5, i32* %Foo.x.gep, align 4
  %Foo = load %Foo, %Foo* %Foo.alloca, align 4
  %foo.alloca = alloca %Foo, align 8
  store %Foo %Foo, %Foo* %foo.alloca, align 4
  %foo = load %Foo, %Foo* %foo.alloca, align 4
  ret %Foo %foo
}

