crates/walrus-codegen/snapshots/struct_construtor.snap
---
source: crates/walrus-codegen/src/codegen.rs
expression: llvm_module.print_to_string().to_string()

---
; ModuleID = 'module'
source_filename = "module"

define void @builtins.exit.wrapper(i8* %env, i32 %status) {
  call void @exit(i32 %status)
  unreachable
}

declare void @exit(i32)

define i32 @builtins.putchar.wrapper(i8* %env, i32 %c) {
  %1 = call i32 @putchar(i32 %c)
  ret i32 %1
}

declare i32 @putchar(i32)

define { i32 } @main(i8* %main.env) {
main.entry:
  %Foo.alloca = alloca { i32 }, align 8
  %Foo.x = getelementptr inbounds { i32 }, { i32 }* %Foo.alloca, i32 0, i32 0
  store i32 5, i32* %Foo.x, align 4
  %Foo = load { i32 }, { i32 }* %Foo.alloca, align 4
  %foo.alloca = alloca { i32 }, align 8
  store { i32 } %Foo, { i32 }* %foo.alloca, align 4
  %foo = load { i32 }, { i32 }* %foo.alloca, align 4
  ret { i32 } %foo
}

