crates/walrus-codegen/snapshots/tuple2.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: llvm_module.print_to_string().to_string()

---
; ModuleID = 'module'
source_filename = "module"

define void @builtins.exit.wrapper(i8* %env, i32 %status) {
  call void @exit(i32 %status)
  unreachable
}

declare void @exit(i32)

define i32 @builtins.putchar.wrapper(i8* %env, i32 %c) {
  %1 = call i32 @putchar(i32 %c)
  ret i32 %1
}

declare i32 @putchar(i32)

define { i32, i32 } @main(i8* %main.env) {
main.entry:
  %tuple.alloca = alloca { i32, i32 }, align 8
  %tuple.0 = getelementptr inbounds { i32, i32 }, { i32, i32 }* %tuple.alloca, i32 0, i32 0
  store i32 1, i32* %tuple.0, align 4
  %tuple.1 = getelementptr inbounds { i32, i32 }, { i32, i32 }* %tuple.alloca, i32 0, i32 1
  store i32 2, i32* %tuple.1, align 4
  %tuple = load { i32, i32 }, { i32, i32 }* %tuple.alloca, align 4
  ret { i32, i32 } %tuple
}

